--- a/lang/es.json
+++ b/lang/es.json
@@ -1,10 +1,10 @@
 {
     "(and :count more error)": "(y :count error más)",
     "(and :count more errors)": "(y :count error más)|(y :count errores más)|(y :count errores más)",
+    "A Timeout Occurred": "Se produjo un tiempo de espera",
     "A decryption key is required.": "Se requiere una clave de descifrado.",
     "A new verification link has been sent to the email address you provided during registration.": "Se ha enviado un nuevo enlace de verificación a la dirección de correo electrónico que proporcionó durante el registro.",
     "A new verification link has been sent to your email address.": "Se ha enviado un nuevo enlace de verificación a su dirección de correo electrónico.",
-    "A Timeout Occurred": "Se produjo un tiempo de espera",
     "Accept": "Aceptar",
     "Accepted": "Aceptado",
     "Action": "Acción",
@@ -12,20 +12,23 @@
     "Add": "Añadir",
     "Add :name": "Agregar :name",
     "Admin": "Administrar",
+    "Adminstration": "Administración",
     "Agree": "Aceptar",
-    "All rights reserved.": "Todos los derechos reservados.",
-    "Already registered?": "¿Ya se registró?",
     "Already Reported": "Ya Reportado",
-    "Archive": "Archivar",
+    "Already registered?": "¿Ya se registró?",
     "Are you sure you want to delete your account?": "¿Está seguro que desea eliminar su cuenta?",
+    "Archive": "Archivar",
     "Assign": "Asignar",
     "Associate": "Asociar",
     "Attach": "Adjuntar",
     "Bad Gateway": "Mala puerta de enlace",
     "Bad Request": "Solicitud incorrecta",
     "Bandwidth Limit Exceeded": "Límite de ancho de banda excedido",
+    "Billing": "Facturación",
+    "Billing details": "Detalles de facturación",
     "Browse": "Navegar",
     "Cancel": "Cancelar",
+    "Cash register": "Caja",
     "Choose": "Elija",
     "Choose :name": "Elegir :name",
     "Choose File": "Elija archivo",
@@ -63,7 +66,6 @@
     "Edit": "Editar",
     "Edit :name": "Editar :name",
     "Email": "Correo electrónico",
-    "email": "El campo :attribute no es un correo válido.",
     "Email Password Reset Link": "Enviar enlace para restablecer contraseña",
     "Enable": "Habilitar",
     "Encrypted environment file already exists.": "El archivo de entorno cifrado ya existe.",
@@ -71,9 +73,6 @@
     "Ensure your account is using a long, random password to stay secure.": "Asegúrese que su cuenta esté usando una contraseña larga y aleatoria para mantenerse seguro.",
     "Environment file already exists.": "El archivo de entorno ya existe.",
     "Environment file not found.": "Archivo de entorno no encontrado.",
-    "errors": "errores",
-    "Expand": "Expandir",
-    "Expand All": "Expandir todo",
     "Expectation Failed": "Expectativa fallida",
     "Explanation": "Explicación",
     "Export": "Exportar",
@@ -94,44 +93,46 @@
     "Hide :name": "Ocultar :name",
     "Home": "Inicio",
     "HTTP Version Not Supported": "Versión HTTP no compatible",
-    "I'm a teapot": "Soy una tetera",
-    "If you did not create an account, no further action is required.": "Si no ha creado una cuenta, no se requiere ninguna acción adicional.",
-    "If you did not request a password reset, no further action is required.": "Si no ha solicitado el restablecimiento de contraseña, omita este mensaje de correo electrónico.",
-    "If you're having trouble clicking the \":actionText\" button, copy and paste the URL below\ninto your web browser:": "Si está teniendo problemas al hacer clic en el botón \":actionText\", copie y pegue la URL de abajo\nen su navegador web:",
     "IM Used": "IM usado",
     "Image": "Imagen",
     "Impersonate": "Personificar",
     "Impersonation": "Personificación",
+    "If you did not create an account, no further action is required.": "Si no ha creado una cuenta, no se requiere ninguna acción adicional.",
+    "If you did not request a password reset, no further action is required.": "Si no ha solicitado el restablecimiento de contraseña, omita este mensaje de correo electrónico.",
+    "If you're having trouble clicking the \":actionText\" button, copy and paste the URL below\ninto your web browser:": "Si está teniendo problemas al hacer clic en el botón \":actionText\", copie y pegue la URL de abajo\nen su navegador web:",
+    "I'm a teapot": "Soy una tetera",
     "Import": "Importar",
     "Import :name": "Importar :name",
     "Insufficient Storage": "Espacio insuficiente",
     "Internal Server Error": "Error interno del servidor",
     "Introduction": "Introducción",
-    "Invalid filename.": "Nombre de archivo no válido.",
     "Invalid JSON was returned from the route.": "Se devolvió un JSON no válido desde la ruta.",
     "Invalid SSL Certificate": "Certificado SSL no válido",
-    "length": "longitud",
-    "Length Required": "Longitud requerida",
+    "Invalid filename.": "Nombre de archivo no válido.",
     "Let's get started":" Vamos a comenzar",
+    "Invoices": "Facturas",
     "Like": "Me gusta",
     "Load": "Cargar",
     "Localize": "Localizar",
     "Location": "Ubicación",
     "Locked": "Bloqueado",
     "Log In": "Iniciar sesión",
-    "Log in": "Iniciar sesión",
     "Log Out": "Finalizar sesión",
+    "Log in": "Iniciar sesión",
     "Login": "Iniciar sesión",
     "Logout": "Finalizar sesión",
     "Loop Detected": "Bucle detectado",
     "Maintenance Mode": "Modo de mantenimiento",
+    "Medical order": "Orden médica",
+    "Medical order details": "Detalles de la orden médica",
+    "Medical order details for": "Detalles de la orden médica para",
+    "Medical orders": "Órdenes médicas",
     "Method Not Allowed": "Método no permitido",
     "Misdirected Request": "Solicitud mal dirigida",
     "Moved Permanently": "Movido permanentemente",
     "Multi-Status": "Multiestado",
     "Multiple Choices": "Múltiples opciones",
     "Name": "Nombre",
-    "name": "nombre",
     "Network Authentication Required": "Se requiere autenticación de red",
     "Network Connect Timeout Error": "Error de tiempo de espera de conexión de red",
     "Network Read Timeout Error": "Error de tiempo de espera de lectura de red",
@@ -146,7 +147,6 @@
     "Not Found": "No encontrado",
     "Not Implemented": "No se ha implementado",
     "Not Modified": "No modificado",
-    "of": "de",
     "OK": "Correcto",
     "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "Una vez que se elimine su cuenta, todos sus recursos y datos se eliminarán de forma permanente. Antes de borrar su cuenta, por favor descargue cualquier dato o información que desee conservar.",
     "Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "Una vez que se elimine su cuenta, todos sus recursos y datos se eliminarán de forma permanente. Ingrese su contraseña para confirmar que desea eliminar su cuenta de forma permanente.",
@@ -161,9 +161,8 @@
     "Pagination Navigation": "Navegación por los enlaces de paginación",
     "Partial Content": "Contenido parcial",
     "Password": "Contraseña",
-    "password": "La contraseña es incorrecta.",
-    "Payload Too Large": "Solicitud demasiado grande",
     "Payment Required": "Pago requerido",
+    "People": "Personas",
     "Permanent Redirect": "Redirección permanente",
     "Please click the button below to verify your email address.": "Por favor, haga clic en el botón de abajo para verificar su dirección de correo electrónico.",
     "Precondition Failed": "Error de condición previa",
@@ -171,6 +170,8 @@
     "Preview": "Previsualizar",
     "Price": "Precio",
     "Processing": "Procesando",
+    "Procedure": "Procedimiento",
+    "Procedures": "Procedimientos",
     "Profile": "Perfil",
     "Profile Information": "Información de perfil",
     "Proxy Authentication Required": "Se requiere autenticación proxy",
@@ -180,6 +181,7 @@
     "Regards,": "Saludos,",
     "Register": "Registrarse",
     "Remember me": "Mantener sesión activa",
+    "Reports": "Reportes",
     "Request Header Fields Too Large": "Campos de encabezado de solicitud demasiado grandes",
     "Request Timeout": "Solicitud de tiempo de espera",
     "Resend Verification Email": "Reenviar correo de verificación",
@@ -188,7 +190,8 @@
     "Reset Password Notification": "Notificación de restablecimiento de contraseña",
     "Restore": "Restaurar",
     "Restore :name": "Restaurar :name",
-    "results": "resultados",
+    "Result": "Resultado",
+    "Results": "Resultados",
     "Retry With": "Reintentar con",
     "Save": "Guardar",
     "Save & Close": "Guardar y cerrar",
@@ -229,7 +232,6 @@
     "This action is unauthorized.": "Esta acción no está autorizada.",
     "This is a secure area of the application. Please confirm your password before continuing.": "Esta es un área segura de la aplicación. Confirme su contraseña antes de continuar.",
     "This password reset link will expire in :count minutes.": "Este enlace de restablecimiento de contraseña expirará en :count minutos.",
-    "to": "al",
     "Toggle navigation": "Alternar navegación",
     "Too Early": "Demasiado temprano",
     "Too Many Requests": "Demasiadas peticiones",
@@ -260,5 +262,14 @@
     "Yes": "Sí",
     "You are receiving this email because we received a password reset request for your account.": "Ha recibido este mensaje porque se solicitó un restablecimiento de contraseña para su cuenta.",
     "You're logged in!": "¡Usted está conectado!",
-    "Your email address is unverified.": "Su dirección de correo electrónico no está verificada."
+    "Your email address is unverified.": "Su dirección de correo electrónico no está verificada.",
+    "de": "de",
+    "email": "El campo :attribute no es un correo válido.",
+    "errors": "errores",
+    "length": "longitud",
+    "name": "nombre",
+    "of": "de",
+    "password": "La contraseña es incorrecta.",
+    "results": "resultados",
+    "to": "al"
 }
