Add Spanish translations for new terms and update Patients header in personas view

--- a/lang/es.json
+++ b/lang/es.json
@@ -156,10 +156,15 @@
     "Open in a parent frame": "Abrir en un marco principal",
     "Open in the topmost frame": "Abrir en el marco superior",
     "Open on the website": "Abrir en el sitio web",
+    "Operation Timed Out": "Operación agotada",
+    "Options": "Opciones",
+    "Order": "Orden",
     "Origin Is Unreachable": "El origen es inalcanzable",
+    "Other": "Otro",
     "Page Expired": "Página expirada",
     "Pagination Navigation": "Navegación por los enlaces de paginación",
     "Partial Content": "Contenido parcial",
+    "Patients": "Pacientes",
     "Password": "Contraseña",
     "Payment Required": "Pago requerido",
     "People": "Personas",
