--- a/lang/es.json
+++ b/lang/es.json
@@ -174,6 +174,7 @@
     "Precondition Required": "Precondición requerida",
     "Preview": "Previsualizar",
     "Price": "Precio",
+    "Print": "Imprimir",
     "Processing": "Procesando",
     "Procedure": "Procedimiento",
     "Procedures": "Procedimientos",
