--- a/lang/es.json
+++ b/lang/es.json
@@ -49,7 +49,9 @@
     "Continue": "Continuar",
     "Create": "Crear",
     "Create :name": "Crear :name",
+    "Create new order": "Nueva orden",
     "Created": "Creado",
+    "Creating": "Creando",
     "Current Password": "Contraseña actual",
     "Dashboard": "Panel",
     "Delete": "Eliminar",
