buscar por  nombre

--- a/lang/es.json
+++ b/lang/es.json
@@ -143,6 +143,7 @@
     "New Password": "Nueva Contraseña",
     "No": "No",
     "No Content": "Sin contenido",
+    "No results found for the search query": "No se encontraron resultados para la consulta de búsqueda",
     "Non-Authoritative Information": "Información no autorizada",
     "Not Acceptable": "Inaceptable",
     "Not Extended": "no extendido",
