--- a/lang/es.json
+++ b/lang/es.json
@@ -11,6 +11,7 @@
     "Actions": "Acciones",
     "Add": "Añadir",
     "Add :name": "Agregar :name",
+    "Address":"Dirección",
     "Admin": "Administrar",
     "Adminstration": "Administración",
     "Agree": "Aceptar",
@@ -21,6 +22,7 @@
     "Assign": "Asignar",
     "Associate": "Asociar",
     "Attach": "Adjuntar",
+    "Advanced Search":"Busqueda avanzada",
     "Bad Gateway": "Mala puerta de enlace",
     "Bad Request": "Solicitud incorrecta",
     "Bandwidth Limit Exceeded": "Límite de ancho de banda excedido",
@@ -62,6 +64,7 @@
     "Disable": "Deshabilitar",
     "Discard": "Descartar",
     "Done": "Hecho",
+    "Document Number":"Numero de documetno",
     "Down": "Abajo",
     "Duplicate": "Duplicar",
     "Duplicate :name": "Duplicar :name",
@@ -172,6 +175,7 @@
     "Payment Required": "Pago requerido",
     "People": "Personas",
     "Permanent Redirect": "Redirección permanente",
+    "Phone":"Telefono",
     "Please click the button below to verify your email address.": "Por favor, haga clic en el botón de abajo para verificar su dirección de correo electrónico.",
     "Precondition Failed": "Error de condición previa",
     "Precondition Required": "Precondición requerida",
@@ -209,6 +213,7 @@
     "Saved.": "Guardado.",
     "Search": "Buscar",
     "Search :name": "Buscar :name",
+    "Search Results":"Resultados de la busqueda",
     "See Other": "Ver otros",
     "Select": "Seleccione",
     "Select All": "Seleccionar todo",
