--- a/lang/es.json
+++ b/lang/es.json
@@ -285,5 +285,6 @@
     "of": "de",
     "password": "La contraseña es incorrecta.",
     "results": "resultados",
-    "to": "al"
+    "to": "al",
+    "Your trusted partner in clinical laboratory management": "Su socio de confianza en la gestión de laboratorios clínicos"
 }
