--- a/lang/es.json
+++ b/lang/es.json
@@ -286,5 +286,6 @@
     "password": "La contraseña es incorrecta.",
     "results": "resultados",
     "to": "al",
-    "Your trusted partner in clinical laboratory management": "Su socio de confianza en la gestión de laboratorios clínicos"
+    "Your trusted partner in clinical laboratory management": "Su socio de confianza en la gestión de laboratorios clínicos",
+    "Enter your credentials to access your account":"Para acceder ingresa tus credenciales"
 }
