--- a/lang/es.json
+++ b/lang/es.json
@@ -75,6 +75,7 @@
     "Enable": "Habilitar",
     "Encrypted environment file already exists.": "El archivo de entorno cifrado ya existe.",
     "Encrypted environment file not found.": "No se encontró el archivo de entorno cifrado.",
+    "End date":"Fecha de finalizción",
     "Ensure your account is using a long, random password to stay secure.": "Asegúrese que su cuenta esté usando una contraseña larga y aleatoria para mantenerse seguro.",
     "Environment file already exists.": "El archivo de entorno ya existe.",
     "Environment file not found.": "Archivo de entorno no encontrado.",
@@ -90,6 +91,7 @@
     "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "¿Olvidó su contraseña? No hay problema. Simplemente déjenos saber su dirección de correo electrónico y le enviaremos un enlace para restablecer la contraseña que le permitirá elegir una nueva.",
     "Found": "Encontrado",
     "Gateway Timeout": "Tiempo de espera de puerta de enlace",
+    "Generate report":"Generar reporte",
     "Go Home": "Ir a inicio",
     "Go to page :page": "Ir a la página :page",
     "Gone": "Recurso no disponible",
@@ -230,6 +232,7 @@
     "Solve": "Resolver",
     "SSL Handshake Failed": "Protocolo de enlace SSL fallido",
     "Start": "Comenzar",
+    "Start date":"Fecha de inicio",
     "Stop": "Detener",
     "Submit": "Enviar",
     "Subscribe": "Suscriba",
