Add validation to update method in CodigoDiagnosticoController, enhance reportes method in ProcedimientoController with date filters, and update view for RIPS report generation

--- a/lang/es.json
+++ b/lang/es.json
@@ -97,6 +97,7 @@
     "Gone": "Recurso no disponible",
     "Hello!": "¡Hola!",
     "Hide": "Ocultar",
+    "Headquarter":"Sedes",
     "Hide :name": "Ocultar :name",
     "Home": "Inicio",
     "HTTP Version Not Supported": "Versión HTTP no compatible",
