feat: Agrega nuevas traducciones y actualiza el pie de página en welcome.blade.php para mejorar la experiencia del usuario

--- a/lang/es.json
+++ b/lang/es.json
@@ -297,5 +297,10 @@
     "Enter your credentials to access your account":"Para acceder ingresa tus credenciales",
     "By logging in, you agree to our": "Al iniciar sesión, usted acepta nuestros",
     "Terms of Service": "Términos de servicio",
-    "New date":"nueva cita"
+    "New date":"nueva cita",
+    "Terms and Conditions of Use":"Términos y Condiciones de Uso",
+    "Review our privacy policies":"Review our privacy policies",
+    "Schedule an Appointment":"Programar una cita",
+    "Book your clinical laboratory appointment quickly and easily":"Reserva tu cita de laboratorio clínico de forma rápida y sencilla"
+
 }
