refactor: Implement TarifaController methods for filtering and storing tarifas, add TarifasExamenesSede component for managing exam prices

--- a/lang/es.json
+++ b/lang/es.json
@@ -80,6 +80,7 @@
     "Ensure your account is using a long, random password to stay secure.": "Asegúrese que su cuenta esté usando una contraseña larga y aleatoria para mantenerse seguro.",
     "Environment file already exists.": "El archivo de entorno ya existe.",
     "Environment file not found.": "Archivo de entorno no encontrado.",
+    "Exams available at this location": "Exámenes disponibles en esta sede",
     "Expectation Failed": "Expectativa fallida",
     "Explanation": "Explicación",
     "Export": "Exportar",
